--- a/setup.cfg
+++ b/setup.cfg
@@ -53,10 +53,10 @@ testing =
 [options.entry_points]
 # Add here console scripts like:
 # console_scripts =
-#     script_name = airpy.module:function
+#     script_name = airPy.module:function
 # For example:
 # console_scripts =
-#     fibonacci = airpy.skeleton:run
+#     fibonacci = airPy.skeleton:run
 # And any other entry points, for example:
 # pyscaffold.cli =
 #     awesome = pyscaffoldext.awesome.extension:AwesomeExtension
@@ -72,7 +72,7 @@ extras = True
 # e.g. --cov-report html (or xml) for html/xml output or --junitxml junit.xml
 # in order to write a coverage file that can be read by Jenkins.
 addopts =
-    --cov airpy --cov-report term-missing
+    --cov airPy --cov-report term-missing
     --verbose
 norecursedirs =
     dist
@@ -110,4 +110,4 @@ exclude =
 # PyScaffold's parameters when the project was created.
 # This will be used when updating. Do not change!
 version = 3.2.1
-package = airpy
+package = airPy
