--- a/setup.cfg
+++ b/setup.cfg
@@ -3,7 +3,7 @@
 # http://setuptools.readthedocs.io/en/latest/setuptools.html#configuring-setup-using-setup-cfg-files
 
 [metadata]
-name = airPy
+name = vayu
 description = Add a short description here!
 author = manvinayaka
 author-email = mann.vinayaka@gmail.com
@@ -30,7 +30,7 @@ package_dir =
 # DON'T CHANGE THE FOLLOWING LINE! IT WILL BE UPDATED BY PYSCAFFOLD!
 setup_requires = pyscaffold>=3.2a0,<3.3a0
 # Add here dependencies of your project (semicolon/line-separated), e.g.
-install_requires = numpy; scipy; datetime; matplotlib; pandas; seaborn; locale; random
+install_requires = numpy; scipy; datetime; matplotlib; pandas; seaborn;
 # The usage of test_requires is discouraged, see `Dependency Management` docs
 # tests_require = pytest; pytest-cov
 # Require a specific Python version, e.g. Python 2.7 or >= 3.4
@@ -43,7 +43,7 @@ exclude =
 
 [options.extras_require]
 # Add here additional requirements for extra features, to install with:
-# `pip install airPy[PDF]` like:
+# `pip install vayu[PDF]` like:
 # PDF = ReportLab; RXP
 # Add here test requirements (semicolon/line-separated)
 testing =
@@ -53,10 +53,10 @@ testing =
 [options.entry_points]
 # Add here console scripts like:
 # console_scripts =
-#     script_name = airPy.module:function
+#     script_name = vayu.module:function
 # For example:
 # console_scripts =
-#     fibonacci = airPy.skeleton:run
+#     fibonacci = vayu.skeleton:run
 # And any other entry points, for example:
 # pyscaffold.cli =
 #     awesome = pyscaffoldext.awesome.extension:AwesomeExtension
@@ -72,7 +72,7 @@ extras = True
 # e.g. --cov-report html (or xml) for html/xml output or --junitxml junit.xml
 # in order to write a coverage file that can be read by Jenkins.
 addopts =
-    --cov airPy --cov-report term-missing
+    --cov vayu --cov-report term-missing
     --verbose
 norecursedirs =
     dist
@@ -110,4 +110,4 @@ exclude =
 # PyScaffold's parameters when the project was created.
 # This will be used when updating. Do not change!
 version = 3.2.1
-package = airPy
+package = vayu
