--- a/setup.cfg
+++ b/setup.cfg
@@ -26,7 +26,7 @@ zip_safe = False
 packages = find:
 include_package_data = True
 package_dir =
-    =src
+    =.
 # DON'T CHANGE THE FOLLOWING LINE! IT WILL BE UPDATED BY PYSCAFFOLD!
 setup_requires = pyscaffold>=3.2a0,<3.3a0
 # Add here dependencies of your project (semicolon/line-separated), e.g.
@@ -37,7 +37,7 @@ install_requires = numpy; scipy; datetime; matplotlib; pandas; seaborn;
 # python_requires = >=2.7,!=3.0.*,!=3.1.*,!=3.2.*,!=3.3.*
 
 [options.packages.find]
-where = src
+where = .
 exclude =
     tests
 
