--- a/.gitignore
+++ b/.gitignore
@@ -49,7 +49,8 @@ MANIFEST
 .venv*/
 .env
 .vscode
-examples/shapeFiles/*
+examples/data/shapeFiles/*
+*daily_44201_2018.csv
 Report/*
 temporary/*
 te.py
