add one notebook to docs

--- a/_quarto.yml
+++ b/_quarto.yml
@@ -16,7 +16,7 @@ website:
 
       - section: "Examples"
         contents:
-          - examples/abcd.ipynb
+          - examples/pollution_rose.ipynb
 
 execute:
   freeze: auto
