add the notebooks to index

--- a/_quarto.yml
+++ b/_quarto.yml
@@ -16,6 +16,7 @@ website:
 
       - section: "Examples"
         contents:
+          - examples/calendar_plot.ipynb
           - examples/pollution_rose.ipynb
 
 execute:
